[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Campfire.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/tilesets/main_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/Enviroment.gd" type="Script" id=3]
[ext_resource path="res://Scripts/DungeonRoom.gd" type="Script" id=4]

[node name="Room" type="Node2D"]
script = ExtResource( 4 )

[node name="Enviroment" type="Node2D" parent="."]
light_mask = 2
script = ExtResource( 3 )

[node name="Layer0" type="TileMap" parent="Enviroment"]
light_mask = 2
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
occluder_light_mask = 4
format = 1

[node name="Layer1" type="TileMap" parent="Enviroment"]
light_mask = -2147483646
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Layer2" type="TileMap" parent="Enviroment"]
light_mask = 2
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
occluder_light_mask = 4
format = 1

[node name="Campfire" parent="." instance=ExtResource( 1 )]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="Enemys" type="Node2D" parent="."]
